# dave

./: .gitignore  Changelog.md  README.md  dave_sim.rosinstall
bathy_dave_plugin/: CMakeLists.txt  bathy_dave.launch  bathy_dave.world  package.xml
bathy_dave_plugin/launch/: bathy_dave.launch  rexrov.launch  robots.launch
bathy_dave_plugin/mkbathy/: mkbathy.sh
bathy_dave_plugin/src/: bathy_plugin.cc  gearth_plugin.cc
bathy_dave_plugin/world/: bathy_dave.world
dvl_gazebo/: CMakeLists.txt  README.md  package.xml
dvl_gazebo/launch/: teledyne_whn_standalone.launch  test_teledyne_whn.launch  upload_test_teledyne_whn.xml  upload_uuvsim_teledyne_whn.xml  upload_whoi_teledyne_whn.xml  uuvsim_teledyne_whn.launch  whoi_teledyne_whn.launch  whoi_teledyne_whn_standalone.launch
dvl_gazebo/meshes/: DVL1000-4000m.dae  TeledyneMarineExplorer.dae
dvl_gazebo/rviz/: whoi_teledyne_dvl.rviz
dvl_gazebo/src/: simple_motion.py
dvl_gazebo/urdf/: nortek_dvl1000_300.xacro  nortek_dvl1000_4000.xacro  nortek_dvl500_300.xacro  nortek_dvl500_4000.xacro  nortek_dvl500_6000.xacro  sonardyne_syrinx600.xacro  teledyne_explorer_1000.xacro  teledyne_explorer_4000.xacro  teledyne_whn.xacro  test_teledyne_whn.xacro
dvl_gazebo/urdf_whoi/: nortek_dvl1000_300.xacro  nortek_dvl1000_4000.xacro  nortek_dvl500_300.xacro  nortek_dvl500_6000.xacro  sonardyne_syrinx600.xacro  teledyne_explorer_1000.xacro  teledyne_explorer_4000.xacro  teledyne_whn.xacro  whoi_teledyne_whn.xacro
dvl_gazebo/worlds/: uuv_dave_ocean_waves_nogravity.world  uuv_dave_ocean_waves_watch_dvl.world  uuv_dave_ocean_waves_watch_whoi_dvl.world
examples/dave_nodes/: CMakeLists.txt  package.xml
examples/dave_robot_launch/: CMakeLists.txt  package.xml
fls_gazebo/: CMakeLists.txt  package.xml
fls_gazebo/config/: fls.rviz  sonar_images.perspective
fls_gazebo/launch/: blueview_basement_cylinder.launch  blueview_cylinder.launch  blueview_sphere.launch  blueview_visualize.launch
fls_gazebo/worlds/: blueview_standalone.world
gazebo/dave_gazebo_model_plugins/: CMakeLists.txt  package.xml
gazebo/dave_gazebo_ros_plugins/: CMakeLists.txt  package.xml
gazebo/dave_gazebo_sensor_plugins/: CMakeLists.txt  package.xml
gazebo/dave_gazebo_sensors/: CMakeLists.txt  package.xml
gazebo/dave_gazebo_visual_plugins/: CMakeLists.txt  package.xml
gazebo/dave_gazebo_world_plugins/: CMakeLists.txt  package.xml
gazebo/dave_gazebo_world_plugins_msgs/: CMakeLists.txt  package.xml
gazebo_tutorials/: CMakeLists.txt  hello.launch  package.xml
gazebo_tutorials/include/: LeadMating.hh
gazebo_tutorials/launch/: electrical_mating_dynamic.launch  electrical_mating_static.launch
gazebo_tutorials/src/: LeadMating.cc  hello_uuv_world.cc  model_push.cc  simple_world_plugin.cpp  uuv_mating.cc  uuv_move_joint.cc
gazebo_tutorials/worlds/: electrical_mating_static.world  hello.world  model_push.world
legacy/usbl_gazebo/: CMakeLists.txt
legacy/uuv_dave/: CMakeLists.txt  package.xml
legacy/uuv_mating/: CMakeLists.txt  package.xml
ocean_currents/: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
ocean_currents/launch/: ocean_currents.launch
ocean_currents/nodes/: ocean_currents
ocean_currents/srv/: GetOceanCurrent.srv
usbl_gazebo/: CMakeLists.txt  README.md  package.xml
usbl_gazebo/include/: transceiverPlugin.hh  transceiverPlugin.hpp  transponderPlugin.hh  transponderPlugin.hpp  usblCommandId.hh  usblCommandId.hpp
usbl_gazebo/launch/: tutorial.launch
usbl_gazebo/msg/: USBLCommand.msg  USBLResponse.msg
usbl_gazebo/src/: transceiverPlugin.cc  transceiverPlugin.cpp  transponderPlugin.cc  transponderPlugin.cpp
usbl_gazebo/worlds/: tutorial.world
uuv_dave/: CMakeLists.txt  package.xml
uuv_dave/launch/: glider_slocum.launch  gripper_controllers.launch  joint_control.launch  joint_effort_controllers.launch  joy_thrusterop.launch  mate.launch  ocean_waves_item.launch  plot_manipulator.launch  record_demo.launch  rexrov_oberon_arms_demo.launch  simple_occlusion_demo.launch  smilodon_standalone.launch  start_glider_teleop.launch  upload_glider_hybrid_whoi.launch  upload_glider_slocum.launch  upload_glider_wave.launch  upload_glider_wave_liquidrobotics.launch  upload_rexrov_oberon7_transient_current.launch  upload_rexrov_predator.launch  uuv_dave.launch  uuv_dave_electrical_mate.launch  uuv_dave_mate.launch  uuv_dave_ocean_waves.launch  uuv_dave_transientcurrent_demo.launch  uuv_gliders_hybrid_whoi.launch  uuv_gliders_slocum.launch  uuv_gliders_wave_liquidrobotics.launch  uuv_manipulator_spring_demo.launch  uuv_plug.launch  uuv_predator.launch  uuv_uwl.launch  valve_manipulation_demo.launch
uuv_dave/nodes/: joy_thrusterop.py
uuv_dave/params/: robot_config.yaml
uuv_dave/rviz/: glider_slocum_control.rviz
uuv_dave/urdf/: glider_hybrid_whoi.xacro  glider_hybrid_whoi_default.urdf.xacro  glider_slocum.xacro  glider_slocum_default.urdf.xacro  glider_slocum_sensors.xacro  glider_wave.xacro  glider_wave_default.urdf.xacro  glider_wave_liquidrobotics.xacro  glider_wave_liquidrobotics_default.urdf.xacro  glider_wave_sensors.xacro  oberon7_default.xacro  parallel_gripper.gazebo.xacro  predator_default.xacro  rexrov_base.xacro  rexrov_oberon7.xacro  rexrov_oberon7_transient_current.xacro  rexrov_oberon7_uwl.xacro  rexrov_oberon7_with_bathy.xacro  rexrov_predator.xacro  rexrov_sensors.xacro  sensor_snippets.xacro  serial_arm.gazebo.xacro  serial_arm.xacro  serial_arm_predator.xacro  sonar_snippets.xacro
uuv_dave/worlds/: ACT1951_predictionMaxSlack_2021-02-24.csv  dave_ocean.world  ocean_current_vs_depth.csv  transientOceanCurrentDatabase.csv  uuv_dave_electrical_mating.world  uuv_dave_electrical_mating_bop.world  uuv_dave_ocean_waves.world  uuv_dave_ocean_waves_spring.world  uuv_dave_ocean_waves_test.world  uuv_dave_ocean_waves_transientcurrent.world  valve_manipulation_demo.world
uuv_dave_plugins/: CMakeLists.txt  package.xml
uuv_dave_plugins/src/: hello_world.cc
uuv_mating/: CMakeLists.txt  package.xml
uuv_mating/launch/: electrical_mating_dynamic.launch  electrical_mating_static.launch
uuv_mating/src/: uuv_mating.cc  (+2 more)
(+956 files in other folders)
