<?xml version="1.0"?>
<package format="2">
  <name>bathy_dave_plugin</name>
  <version>0.0.1</version>
  <description>The bathymetry package</description>

  <maintainer email="woensug.choi@gmail.com">Woensug Choi</maintainer>

  <author email="woensug.choi@gmail.com">Woensug Choi</author>
  
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend version_gte="2.5.17">gazebo_ros</depend>
  <depend>gazebo_dev</depend>
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>

</package>
