<?xml version="1.0"?>
<package format="2">
  <name>dvl_gazebo</name>
  <version>0.0.1</version>
  <description>The fls_gazebo package</description>
  <maintainer email="dtdavis89@gmail.com">dtd</maintainer>
  <author email="dtdavis89@gmail.com">Duane Davis</author>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend version_gte="2.5.17">gazebo_ros</depend>
  <depend>gazebo_dev</depend>
  <depend>uuv_sensor_ros_plugins</depend>
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
