<?xml version="1.0"?>
<package format="2">
  <name>fls_gazebo</name>
  <version>0.0.1</version>
  <description>The fls_gazebo package</description>
  <maintainer email="briansbingham@gmail.com">bsb</maintainer>
  <author email="briansbingham@gmail.com">Brian Bingham</author>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend version_gte="2.5.17">gazebo_ros</depend>
  <depend>gazebo_dev</depend>
  <depend>uuv_sensor_ros_plugins</depend>
</package>
