<?xml version="1.0"?>
<package format="2">
  <name>dave_nodes</name>
  <version>3.1.1</version>
  <description>The dave_nodes package contains miscellaneous ROS node definitions used by the examples</description>
  <maintainer email="dtdavi1@nps.edu">dtd</maintainer>
  <license>Apache2</license>
  <author email="dtdavi1@nps.edu">dtd</author> -->
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>moveit_commander</exec_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
