<?xml version="1.0"?>
<package format="2">
  <name>dave_robot_launch</name>
  <version>3.1.1</version>
  <description>The dave_robot_launch package</description>
  <maintainer email="dtdavi1@nps.edu">dtd</maintainer>
  <license>Apache2</license>
  <author email="dtdavi1@nps.edu">dtd</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>caldus_description</depend>
  <depend>caracara_description</depend>
  <depend>smilodon_description</depend>
  <depend>teledyne_whn_dsl_description</depend>
  <depend>teledyne_whn_uuvsim_description</depend>
  <depend>teledyne_explorer4000_dsl_description</depend>
  <depend>teledyne_explorer4000_uuvsim_description</depend>
  <depend>nortek_dvl1000_4000_dsl_description</depend>
  <depend>nortek_dvl1000_4000_uuvsim_description</depend>
  <depend>uuv_assistants</depend>
  <depend>uuv_descriptions</depend>
  <depend>uuv_gazebo_plugins</depend>
  <depend>uuv_gazebo_ros_plugins</depend>
  <depend>ds_sim</depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
