<?xml version="1.0"?>
<package format="2">
  <name>dave_gazebo_model_plugins</name>
  <version>3.1.1</version>
  <description>The dave_gazebo_model_plugins package (Gazebo model plugin definitions)</description>
  <author email="dtdavi1@nps.edu">Duane Davis</author>
  <maintainer email="dtdavis@nps.edu">dtdavis</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>protobuf-dev</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>protobuf</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>protobuf</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>protobuf</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <!-- temporal -->
  <depend>gazebo_dev</depend>
  <depend>gazebo_msgs</depend>
  <depend>dave_gazebo_world_plugins</depend>
  <depend>dave_gazebo_ros_plugins</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
