<?xml version="1.0"?>
<package format="2">
  <name>uuv_dave</name>
  <version>0.0.1</version>
  <description>The uuv_dave package</description>
  <maintainer email="bdallen@nps.edu">Bruce Allen</maintainer>
  <author email="bdallen@nps.edu">Bruce Allen</author>
  <license>Apache-2.0</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend version_gte="2.5.17">gazebo_ros</depend>
  <depend>gazebo_dev</depend>
  <depend>uuv_sensor_ros_plugins</depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>

</package>
